--- a/src/cv.html
+++ b/src/cv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CV</title>
+    <title>Emergency Helpsite Home Page</title>
     <link rel="stylesheet" href="./src/style.css" />
     <link rel="stylesheet" type="text/css" href="../public/Stylecv.css" />
     <link rel="stylesheet" type="text/css" href="../public/Style.css" />
