--- a/src/cv.html
+++ b/src/cv.html
@@ -96,5 +96,15 @@
         </div>
       </div>
     </div>
+    <script>
+      const hamburger = document.querySelector(".hamburger");
+      const nav = document.querySelector("ul");
+      console.log(nav);
+
+      hamburger.addEventListener("click", () => {
+        hamburger.classList.toggle("active");
+        nav.classList.toggle("active");
+      });
+    </script>
   </body>
 </html>
